@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+08-May-2005
+~~~~~~~~~~~
+Selecting an entry from the bookmarks menu can open a new window, depending
+on the mouse button used and the 'New window on button 1' setting
+(Stephen Watson).
+
 03-May-2005
 ~~~~~~~~~~~
 World-writable directories can't be app dirs (Thomas Leonard).
